Added signup page:

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -11,5 +11,8 @@
     "createAccountBtnLabel": "Create Accoount",
     "forgotPasswordLink": "Forgot Password?",
     "showPasswordLink": "Show",
-    "hidePasswordLink":"Hide"
+    "hidePasswordLink":"Hide",
+    "signupPageTitle": "Get Started",
+    "signupPageSubtitle": "Register an account.",
+    "confirmPasswordLabel" :"Confirm Password"
 }
